# C++ Include directories
# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB HOOK_SOURCES
    "DustAI/*.cpp"
    "DustAI/*.h"
    "*.cpp"
    "*.h"
)

ADD_LIBRARY(DustHook SHARED ${HOOK_SOURCES})

SET(GAME_DIRECTORY "" CACHE PATH "Path to From Dust")

TARGET_LINK_LIBRARIES(DustHook d3d9)

# Override 32-bit XAPOFX1_5.
SET_TARGET_PROPERTIES(DustHook PROPERTIES OUTPUT_NAME XAPOFX1_5)
SET_TARGET_PROPERTIES(DustHook PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")

if (GAME_DIRECTORY)
    INSTALL(TARGETS DustHook
        RUNTIME DESTINATION ${GAME_DIRECTORY}
    )
endif ()